--- a/FinalReport.rmd
+++ b/FinalReport.rmd
@@ -49,6 +49,15 @@ The drug appears to make woman more susceptible to the virus.
 
 <!--Numerical results go here. Use the numerical results to describe the patterns if any that exist in the data as focused toward the research question!-->
 
+```{r}
+table1 <- xtabs(~infected + treatment, data=Females)
+rowPerc(table1)
+colPerc(table1)
+```
+
+The table shows that if a female were to get the vaccine, 
+she would be 1.4x more likely to contract the virus in comparison to the placebo group.
+
 ## Inferential Results
 
 <!--State hypothesis clearly.  Make sure your discussion of the inferential test covers all the aspects that the test output produces, such as test statistic, p-value etc.  Make a decision about the null hypothesis, explain the assumptions on which the selected test/procedure was based, and why the chosen procedure satisfys the assumptions and is appropriate to answer the research question!-->
