--- a/FinalReport.rmd
+++ b/FinalReport.rmd
@@ -62,6 +62,13 @@ she would be 1.4x more likely to contract the virus in comparison to the placebo
 
 <!--State hypothesis clearly.  Make sure your discussion of the inferential test covers all the aspects that the test output produces, such as test statistic, p-value etc.  Make a decision about the null hypothesis, explain the assumptions on which the selected test/procedure was based, and why the chosen procedure satisfys the assumptions and is appropriate to answer the research question!-->
 
+```{r}
+chisq.test(table1)
+chisqtestGC(table1)
+fisher.test(table1)
+```
+
+We reject the null hypothesis because the p-value is less than 0.05. Our p-value is 0.00007686. The fisher exact table is also significant in showing that we reject the null hypothesis because our p-value is 0.00006596.
 
 # Discussion and Conclusion
 
